--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "websocket-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Hector Salinas",
-  "license": "MIT",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.1",
-    "socket.io": "^2.3.0"
-  }
+	"name": "websocket-server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"build": "esbuild index.js --bundle --outfile=./build/app.js --platform=node --target=node15.0 --external:./node_modules/*",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "Hector Salinas",
+	"license": "MIT",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"esbuild": "^0.14.43",
+		"express": "^4.17.1",
+		"nodemon": "^2.0.1",
+		"socket.io": "^2.3.0"
+	}
 }
